--- a/APPSCRIPT FILES/MineJs.html
+++ b/APPSCRIPT FILES/MineJs.html
@@ -1,5 +1,4 @@
 <script>
-  //735
 function ensureLegacyProjectShape_(p) {
   if (!p) return p;
 
@@ -51,23 +50,6 @@ function loadMine() {
   apiProjectsRequest_({ mode: 'mine', email: emailParam })
     .then(res => {
       const rows = ensureLegacyProjects_(res.projects || []);
-
-      // Ensure every row has a stable projectKey (Project # + Project) for saving (Step 2)
-      rows.forEach(p => {
-        if (!p) return;
-        if (!p.projectKey) {
-          if (typeof getProjectKeyFromRow === 'function') {
-            p.projectKey = getProjectKeyFromRow(p) || '';
-          } else if (typeof makeProjectKey === 'function') {
-            p.projectKey = makeProjectKey(p.projectNumber, p.projectName) || '';
-          } else {
-            const pn = String(p.projectNumber || '').trim().toLowerCase();
-            const nm = String(p.projectName || '').trim().toLowerCase();
-            p.projectKey = (pn || nm) ? `${pn}||${nm}` : '';
-          }
-        }
-      });
-
       GLOBAL_META = res; // Store full response
 
       const next = rows || [];
@@ -89,19 +71,10 @@ function loadMine() {
       if (!MINE_ROWS || MINE_ROWS.length === 0) {
         console.warn('Using Fallback Projects');
         MINE_ROWS = [
-          { rowIndex: '101', projectNumber: '101', projectName: 'Mock Project 1', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] },
-          { rowIndex: '102', projectNumber: '102', projectName: 'Mock Project 2', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] },
-          { rowIndex: '103', projectNumber: '103', projectName: 'Mock Project 3', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] }
+          { rowIndex: 101, projectNumber: '101', projectName: 'Mock Project 1', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] },
+          { rowIndex: 102, projectNumber: '102', projectName: 'Mock Project 2', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] },
+          { rowIndex: 103, projectNumber: '103', projectName: 'Mock Project 3', status: 'Open', my: { priority: '' }, team: [{ slot: 1 }, { slot: 2 }, { slot: 3 }] }
         ];
-        // Give fallback rows a stable key too
-        MINE_ROWS.forEach(p => {
-          if (!p.projectKey) {
-            const pn = String(p.projectNumber || '').trim().toLowerCase();
-            const nm = String(p.projectName || '').trim().toLowerCase();
-            p.projectKey = (pn || nm) ? `${pn}||${nm}` : '';
-          }
-        });
-
         if (ACTIVE_TAB === 'mine') render();
       }
     });
@@ -109,20 +82,18 @@ function loadMine() {
 
 
 // --- Conflict Logic & Batch Update ---
-
 async function handlePriorityChange(rowIndex, newPrio) {
-  const id = String(rowIndex);
-  const row = MINE_ROWS.find(r => String(r.rowIndex) === id);
+  const row = MINE_ROWS.find(r => r.rowIndex === rowIndex);
   if (!row) return;
 
   // If clearing priority, just save
   if (!newPrio) {
-    saveRow(id, 'mine');
+    saveRow(rowIndex, 'mine');
     return;
   }
 
   // Check Conflict
-  const conflict = MINE_ROWS.find(r => String(r.rowIndex) !== id && String(r.my.priority) === String(newPrio));
+  const conflict = MINE_ROWS.find(r => r.rowIndex !== rowIndex && String(r.my.priority) === String(newPrio));
 
   if (conflict) {
     // Show Modal
@@ -138,18 +109,17 @@ async function handlePriorityChange(rowIndex, newPrio) {
       // Optimistic update
       render();
       // Save both
-      saveRow(String(conflict.rowIndex), 'mine');
-      saveRow(String(row.rowIndex), 'mine');
+      saveRow(conflict.rowIndex, 'mine');
+      saveRow(row.rowIndex, 'mine');
     }
     if (choice === 'shift') {
-      await executeShift(id, parseInt(newPrio, 10));
+      await executeShift(rowIndex, parseInt(newPrio));
     }
   } else {
     // No conflict, just save
-    saveRow(id, 'mine');
+    saveRow(rowIndex, 'mine');
   }
 }
-
 
 function showConflictModal(prio, otherName) {
   return new Promise(resolve => {
@@ -202,29 +172,39 @@ function showConflictModal(prio, otherName) {
   });
 }
 
-
 async function executeShift(targetRowIndex, startPrio) {
-  // Logic:
-  // - Insert target project at startPrio.
-  // - Bump any existing conflicts down until a gap or >10.
+  // Logic: 
+  // 1. Get all ranked items (1..10).
+  // 2. Sort by rank (1 top).
+  // 3. Insert target item at startPrio position? 
+  //    Actually, simpler: 
+  //    We want target to be 'startPrio'.
+  //    The item currently at 'startPrio' moves to 'startPrio+1'.
+  //    The item at 'startPrio+1' moves to '+2'...
+  //    Chain reaction until gap or >10.
 
-  const targetId = String(targetRowIndex);
   const updates = [];
-
-  const target = MINE_ROWS.find(r => String(r.rowIndex) === targetId);
-  if (!target) return;
-
+  const target = MINE_ROWS.find(r => r.rowIndex === targetRowIndex);
   target.my.priority = String(startPrio);
   updates.push(target);
 
-  // Get all OTHER rows with numeric priority
-  let others = MINE_ROWS.filter(r => String(r.rowIndex) !== targetId && getRank(r.my.priority) > 0);
+  let currentPrio = startPrio;
 
-  // Map to simple objects {r, p} where p is 1-10 int
-  let chain = others
-    .map(r => ({ r, p: parseInt(r.my.priority, 10) }))
-    .filter(x => !isNaN(x.p))
-    .sort((a, b) => a.p - b.p);
+  // Find valid chain
+  // We need to find the item that WAS at currentPrio (excluding target)
+  // And move it to currentPrio + 1
+  // Repeat.
+
+  // Get all OTHER rows with numeric priority
+  let others = MINE_ROWS.filter(r => r.rowIndex !== targetRowIndex && getRank(r.my.priority) > 0);
+
+  // Map to simple objects {row, p} where p is 1-10 int
+  let chain = others.map(r => ({ r, p: parseInt(r.my.priority) })).sort((a, b) => a.p - b.p);
+
+  // We are inserting at 'startPrio'.
+  // Any item with p >= startPrio needs to be bumped.
+  // But strictly, if we set target to 5. Old 5 becomes 6. Old 6 becomes 7.
+  // If there is NO 6, then 6 is free, chain stops.
 
   let bumpPrio = startPrio;
   while (true) {
@@ -238,21 +218,29 @@ async function executeShift(targetRowIndex, startPrio) {
       break;
     }
 
-    const conflictItem = chain.find(x => x.p === bumpPrio);
-    if (!conflictItem) break; // Slot free, chain ends
+    // Find item occupying the slot we want to push into (bumpPrio)
+    // Wait, initially target took 'startPrio'. 
+    // Is there a conflict at 'startPrio'? Yes, otherwise we wouldn't be here.
+    // So conflict item needs to move to 'bumpPrio + 1'.
 
+    const conflictItem = chain.find(x => x.p === bumpPrio);
+    if (!conflictItem) {
+      break; // Slot free, chain ends
+    }
+
+    // Move conflict item to next slot
     bumpPrio++;
     conflictItem.r.my.priority = String(bumpPrio);
     updates.push(conflictItem.r);
+    // Loop continues to check if 'bumpPrio' (newly occupied) was alrady taken
   }
 
-  // Optimistic UI
+  // Apply visual updates
   render();
 
   // Save all modified rows
-  updates.forEach(u => saveRow(String(u.rowIndex), 'mine'));
+  updates.forEach(u => saveRow(u.rowIndex, 'mine'));
 }
-
 
 function buildMineCard(r) {
   const card = document.createElement('div');
@@ -261,6 +249,21 @@ function buildMineCard(r) {
   const effPrio = getEffectivePrio(r, 'mine');
   const colorClass = getPrioClass(effPrio);
   card.className = `card ${colorClass}`;
+
+  // Removed "Completed" condensation logic for Designers?
+  // User: "for the cards that are not assigned sort them by the max priority set by the other deisgner... there will be no complete button for designer"
+  // If PM marks it completed, Designer still sees it. It should probably still be condensed/styled as completed.
+  // REMOVED condensed logic per user request (Show inputs always)
+  /*
+  const isDone = normalize(effPrio) === 'completed';
+  if (isDone) {
+    card.classList.add('condensed');
+    card.title = "Marked Completed by PM/Ops";
+    card.onclick = (e) => {
+       if (!e.target.closest('select') && !e.target.closest('textarea')) toggleCondensed(card.id);
+    };
+  }
+  */
 
   const top = document.createElement('div');
   top.className = 'card-top';
@@ -274,6 +277,20 @@ function buildMineCard(r) {
 
   const meta = document.createElement('div');
   meta.className = 'project-meta';
+
+  let pmTag = '';
+  // Show PM Priority if set, but it no longer drives sorting directly? 
+  // User: "keep everything the same but now get rid of the pm priority... pm can directly change the priority for each designer"
+  // So PM priority is deprecated?? 
+  // "get rid of the pm priority" - this might mean the concept of a single "PM Priority" field.
+  // Instead PM sets Designer Priority.
+  // But we still have `r.pm.priority` in data?
+  // If `r.pm.priority` is gone, we shouldn't display it.
+  // I will hide it or assume it's legacy.
+  // User: "get rid of the pm priority. keep the pm notes."
+
+  // So no PM priority tag.
+
   meta.innerHTML = `<span>#${r.projectNumber}</span> <span class="pm-tag">${r.pmName || 'No PM'}</span>`;
 
   left.appendChild(title);
@@ -299,9 +316,11 @@ function buildMineCard(r) {
   grp1.innerHTML = '<label style="font-size:11px;font-weight:700;color:var(--text-muted);display:block;margin-bottom:4px;">MY PRIORITY</label>';
   const sel = document.createElement('select');
   sel.className = `input-field ${!r.my?.priority ? 'error' : ''}`;
-  sel.dataset.row = String(r.rowIndex);
+  sel.dataset.row = r.rowIndex;
 
   // Dynamic Priority Options (User Req: "if 10 or more, 1-10. if less, 1-x.")
+
+  // 1. Calculate Active Projects Count
   const ARCHIVE_STATUSES = [
     'abandoned,expired',
     'approved - construction phase',
@@ -310,10 +329,13 @@ function buildMineCard(r) {
     'do not click - final submit for approval'
   ];
   const activeCount = MINE_ROWS.filter(row => !ARCHIVE_STATUSES.includes(normalize(row.status))).length;
+
   const maxOptions = activeCount >= 10 ? 10 : Math.max(activeCount, 1); // Min 1 option
 
   const opts = [];
-  for (let i = 1; i <= maxOptions; i++) opts.push(String(i));
+  for (let i = 1; i <= maxOptions; i++) {
+    opts.push(String(i));
+  }
 
   const def = document.createElement('option');
   def.value = ''; def.textContent = '—';
@@ -325,7 +347,8 @@ function buildMineCard(r) {
 
     // Check who owns this priority
     const owner = MINE_ROWS.find(row => String(row.my?.priority) === String(o));
-    if (owner && String(owner.rowIndex) !== String(r.rowIndex)) {
+    if (owner && owner.rowIndex !== r.rowIndex) {
+      // Limit name length if needed, but for now full name is fine
       let name = owner.projectName || 'Untitled';
       if (name.length > 30) name = name.substring(0, 27) + '...';
       opt.textContent = `${o} - ${name}`;
@@ -342,7 +365,7 @@ function buildMineCard(r) {
   grp2.innerHTML = '<label style="font-size:11px;font-weight:700;color:var(--text-muted);display:block;margin-bottom:4px;">MY NOTES</label>';
   const ta = document.createElement('textarea');
   ta.className = 'textarea-field';
-  ta.dataset.row = String(r.rowIndex);
+  ta.dataset.row = r.rowIndex;
   ta.value = r.my?.notes || '';
   grp2.appendChild(ta);
 
@@ -362,6 +385,10 @@ function buildMineCard(r) {
     d.className = 'team-card';
 
     if (m?.name) {
+      // Need to show if it's ME?
+      // No, this is "Other Team Members" display or all?
+      // Usually shows others. My slot logic is handled by "My Priority".
+
       const dateStr = m.dateDisplay ? m.dateDisplay.split(' ')[0] : '';
       d.innerHTML = `
             <div class="tm-header">${m.name}</div>
@@ -389,7 +416,7 @@ function buildMineCard(r) {
   footer.innerHTML = `<div style="display:flex;align-items:center;"><span class="sync-dot" id="dot-${r.rowIndex}"></span><span id="msg-${r.rowIndex}">${r.lastModified?.dateDisplay ? 'Upd ' + r.lastModified.dateDisplay : ''}</span></div><div>${r.my?.dateDisplay || ''}</div>`;
   card.appendChild(footer);
 
-  // Drag & Drop Logic (no UX change; just keep row ids consistent as strings)
+  // Drag & Drop Logic
   const isActive = !['abandoned,expired', 'approved - construction phase', 'completed - sent to client'].some(s => normalize(r.status).includes(s));
 
   if (isActive) {
@@ -398,17 +425,18 @@ function buildMineCard(r) {
 
     card.addEventListener('dragstart', (e) => {
       e.dataTransfer.effectAllowed = 'move';
-      e.dataTransfer.setData('text/plain', String(r.rowIndex));
+      e.dataTransfer.setData('text/plain', r.rowIndex);
       card.classList.add('dragging');
+      // Store initial clientY to detecting direction if needed, but simple reorder is fine
     });
 
-    card.addEventListener('dragend', () => {
+    card.addEventListener('dragend', (e) => {
       card.classList.remove('dragging');
       document.querySelectorAll('.draggable-card').forEach(c => c.classList.remove('drag-over'));
     });
 
     card.addEventListener('dragover', (e) => {
-      e.preventDefault();
+      e.preventDefault(); // Necessary to allow dropping
       e.dataTransfer.dropEffect = 'move';
       card.classList.add('drag-over');
     });
@@ -420,64 +448,67 @@ function buildMineCard(r) {
     card.addEventListener('drop', async (e) => {
       e.preventDefault();
       card.classList.remove('drag-over');
+      const draggedRowIndex = parseInt(e.dataTransfer.getData('text/plain'));
+      if (draggedRowIndex === r.rowIndex) return;
 
-      const draggedRowIndex = String(e.dataTransfer.getData('text/plain') || '');
-      const targetRowIndex = String(r.rowIndex);
-
-      if (!draggedRowIndex || draggedRowIndex === targetRowIndex) return;
-
-      await handleCardDrop(draggedRowIndex, targetRowIndex);
+      await handleCardDrop(draggedRowIndex, r.rowIndex);
     });
   }
 
   sel.addEventListener('change', () => {
     sel.classList.remove('error');
-    handlePriorityChange(String(r.rowIndex), sel.value);
+    handlePriorityChange(r.rowIndex, sel.value);
   });
-
-  ta.addEventListener('input', () => debounceSave(String(r.rowIndex), 'mine'));
+  ta.addEventListener('input', () => debounceSave(r.rowIndex, 'mine'));
 
   return card;
 }
 
-
+// DnD Handler
 async function handleCardDrop(draggedIdx, targetIdx) {
-  const draggedId = String(draggedIdx);
-  const targetId = String(targetIdx);
+  // 1. Get all Active cards (visible in grid)
+  // We rely on MINE_ROWS filters? Or just all Active?
+  // Let's us visual order from DOM or just sort MINE_ROWS?
+  // User wants "Manual Sorting". Best way is to manipulate the array logic.
 
-  const row = MINE_ROWS.find(r => String(r.rowIndex) === draggedId);
+  // Strategy:
+  // Get all active rows sort by current priority (bumping unprioritized to bottom)
+  // Remove dragged item.
+  // Insert at target item's position.
+  // Re-assign priorities 1..N.
+
+  const row = MINE_ROWS.find(r => r.rowIndex === draggedIdx);
   if (!row) return;
 
+  // Filter only active, "mine" view items
   const ARCHIVE_STATUSES = ['abandoned,expired', 'approved - construction phase', 'completed - sent to client'];
   let activeRows = MINE_ROWS.filter(r => !ARCHIVE_STATUSES.some(s => normalize(r.status).includes(s)));
 
   // Current Sort: Priority 1..N, then others
   activeRows.sort((a, b) => {
-    const pA = parseInt(a.my?.priority, 10);
-    const pB = parseInt(b.my?.priority, 10);
-    const aVal = (!isNaN(pA) ? pA : 999);
-    const bVal = (!isNaN(pB) ? pB : 999);
-    if (aVal !== bVal) return aVal - bVal;
-
-    // Stable sort for unprioritized
-    const an = parseFloat(a.rowIndex) || 0;
-    const bn = parseFloat(b.rowIndex) || 0;
-    return an - bn;
+    const pA = parseInt(a.my?.priority) || 999;
+    const pB = parseInt(b.my?.priority) || 999;
+    if (pA !== pB) return pA - pB;
+    // Stable sort for unprioritized? IDK.
+    return a.rowIndex - b.rowIndex;
   });
 
-  const oldIndex = activeRows.findIndex(r => String(r.rowIndex) === draggedId);
-  const newIndex = activeRows.findIndex(r => String(r.rowIndex) === targetId);
+  const oldIndex = activeRows.findIndex(r => r.rowIndex === draggedIdx);
+  const newIndex = activeRows.findIndex(r => r.rowIndex === targetIdx);
+
   if (oldIndex === -1 || newIndex === -1) return;
 
   // Move
   activeRows.splice(oldIndex, 1);
   activeRows.splice(newIndex, 0, row);
 
-  // Re-assign priorities 1..N based on new order
+  // Re-assign Logic
+  // Assign 1 to N based on new order
   const updates = [];
+
   activeRows.forEach((r, idx) => {
     const newPrio = String(idx + 1);
-    if (String(r.my.priority || '') !== newPrio) {
+    if (r.my.priority !== newPrio) {
       r.my.priority = newPrio;
       updates.push(r);
     }
@@ -486,12 +517,10 @@ async function handleCardDrop(draggedIdx, targetIdx) {
   // Optimistic UI
   render();
 
-  // Save changes (saveRow now carries stable project identity; Step 2)
-  await Promise.all(updates.map(u => saveRow(String(u.rowIndex), 'mine')));
+  // Save changes
+  // Using Promise.all for speed - might spam server but fine for <20 items
+  await Promise.all(updates.map(u => saveRow(u.rowIndex, 'mine')));
 }
-
-
-
 
 function createFolderCard(title, rows, color) {
   const folder = document.createElement('div');
@@ -693,19 +722,17 @@ window.closeSidePanel = function () {
   document.body.style.overflow = '';
 };
 
-
 function smartUpdateCard(rowIndex, newPriority, oldPriority) {
   if (typeof window.enhancedSmartUpdateCard === 'function') {
     window.enhancedSmartUpdateCard(rowIndex, newPriority, oldPriority);
     return;
   }
 
-  const id = String(rowIndex);
-  const cardId = `card-${id}`;
+  const cardId = `card-${rowIndex}`;
   const cardEl = document.getElementById(cardId);
   if (!cardEl) return;
 
-  const cardData = MINE_ROWS.find(r => String(r.rowIndex) === id);
+  const cardData = MINE_ROWS.find(r => r.rowIndex === rowIndex);
   if (!cardData) return;
 
   const oldEffPrio = getEffectivePrio(cardData, 'mine');
@@ -736,10 +763,10 @@ function smartUpdateCard(rowIndex, newPriority, oldPriority) {
       return !['completed', 'on hold', 'abandoned'].includes(eff);
     });
 
-    // Simplest fallback: just re-render
+    // ... sorting logic ...
+    // Simplest fallback: just re-render or do the swap
     setTimeout(() => render(), 50);
   }
 }
-
 
 </script>
